# Object-Viewer

./: CMakeLists.txt  README.md
lib/: glew32.lib  glfw3.lib
shaders/: vertex_shader.glsl
src/: main.cpp  main.h
